Styles with bootstrap5

--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -1,5 +1,13 @@
 {% extends "learning_logs/base.html" %}
 
+
+{% block header %}
+    <h1>Bem-vindo ao Learning Log</h1>
+    <h4>Uma aplicação para organizar seus estudos e anotações.</h4>
+{% endblock header %}
+
 {% block content %}
-    <p>Esta aplicação ajudará a organizar os seus estudos.</p>
+    <p>Para começar, faça login ou registre-se como um novo usuário.<br>
+    Após o login, você poderá criar novos tópicos de estudo e adicionar anotações a eles.<br>
+    Explore e organize seus estudos de forma eficiente!</p>
 {% endblock content %}
